--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   go_router: ^6.5.5
+  provider: ^6.0.5
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
