--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   go_router: ^6.5.5
   provider: ^6.0.5
   cached_network_image: ^3.2.3
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
